force-app/main/default/objects/DataGovernance__c/DataGovernance__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Fields we&apos;ll use to check for the data governance rules.</description>
    <label>Data Governance</label>
</CustomObject>