force-app/main/default/objects/DataGovernance__c/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the field to check for changes</inlineHelpText>
    <label>Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>