force-app/main/default/objects/DataGovernance__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Is this active?</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>