force-app/main/default/objects/DataGovernance__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Which object are we referencing?</inlineHelpText>
    <label>Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>