force-app/main/default/objects/DataGovernance__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What type of operation are we checking?</inlineHelpText>
    <label>Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>