force-app/main/default/objects/DataGovernance__c/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Which user this is applicable for</inlineHelpText>
    <label>User Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>