force-app/main/default/objects/DataGovernance__c/listViews/Account.listView-meta.xml
<ListView>
    <fullName>Account</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>UserType__c</columns>
    <columns>FieldName__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ObjectName__c</field>
        <operation>equals</operation>
        <value>Account</value>
    </filters>
    <label>Account</label>
</ListView>