force-app/main/default/objects/DataGovernance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ObjectName__c</columns>
    <columns>FieldName__c</columns>
    <columns>IsActive__c</columns>
    <columns>Type__c</columns>
    <columns>UserType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>