force-app/main/default/objects/DataGovernance__c/listViews/Contact.listView-meta.xml
<ListView>
    <fullName>Contact</fullName>
    <columns>NAME</columns>
    <columns>ObjectName__c</columns>
    <columns>FieldName__c</columns>
    <columns>IsActive__c</columns>
    <columns>Type__c</columns>
    <columns>UserType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ObjectName__c</field>
        <operation>equals</operation>
        <value>Contact</value>
    </filters>
    <label>Contact</label>
</ListView>