force-app/main/default/objects/DataGovernance__c/listViews/Sales_Rep.listView-meta.xml
<ListView>
    <fullName>Sales_Rep</fullName>
    <columns>NAME</columns>
    <columns>ObjectName__c</columns>
    <columns>FieldName__c</columns>
    <columns>IsActive__c</columns>
    <columns>Type__c</columns>
    <columns>UserType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UserType__c</field>
        <operation>equals</operation>
        <value>Sales Representative</value>
    </filters>
    <label>Sales Rep</label>
</ListView>